--- a/config/settings.yml.example
+++ b/config/settings.yml.example
@@ -2,6 +2,8 @@ defaults: &defaults
   untappd:
     client_id: token
     client_secret: token
+    username: username
+    
 development:
   <<: *defaults
 
