add strava support and implement activities import

--- a/config/settings.yml.example
+++ b/config/settings.yml.example
@@ -3,7 +3,11 @@ defaults: &defaults
     client_id: token
     client_secret: token
     username: username
-    
+
+  strava:
+    client_secret: token
+    access_token: token
+
 development:
   <<: *defaults
 
