create book model and integrate goodreads api

--- a/config/settings.yml.example
+++ b/config/settings.yml.example
@@ -8,6 +8,11 @@ defaults: &defaults
     client_secret: token
     access_token: token
 
+  goodreads:
+    key: token
+    secret: token
+    user_id: token
+
 development:
   <<: *defaults
 
